# CustomRichStatus

./: .gitignore  .travis.yml  Cargo.toml  README.md  config.defaults.yml  config.example.yaml  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
ci/: before_deploy.ps1  before_deploy.sh
presets/: source-promo.yml  standard.yml  template.yml
src/: dto.rs  main.rs
src/command_engine/: command.rs  engine.rs  mod.rs
src/command_engine/commands/: clear.rs  create.rs  delete.rs  list.rs  mod.rs  presets.rs  quit.rs  set.rs
src/commands/: clear.rs  mod.rs  quit.rs  set.rs
src/configuration/: config.rs  mod.rs
src/models/: config.rs  dto.rs  mod.rs  preset.rs
src/state/: app_state.rs  meta_data.rs  mod.rs
src/utils/: ctrl.rs  discord.rs  fail.rs  gnr_error.rs  mod.rs  time_diff.rs
