[package]
name = "custom_rich_status"
description = "A repl command line for updating a Discord Rich Presence"
version = "1.1.0"
authors = ["Khionu Sybiern <dev@khionu.net>"]

[dependencies]
discord-rpc-client = "^0.2"
clap = "2"
serde = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
chrono = "0.4"
quoted_strings = "0.1.0"